FEAT: Updating manifest color theme

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#bd5319",
+  "theme_color": "#c86919",
   "background_color": "#ffffff"
 }
